user-api/overlays/ocp4-stage/khemenu.route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-khemenu-route53
spec:
    host: khemenu.thoth-station.ninja
    to:
        kind: Service
        name: user-api
    tls:
        caCertificate: ENC[AES256_GCM,data:nXr6ZnnBwAxq43USMmWWTiR4vnCycrd3MGVint697nIe0c79rYLEFfB5eV1iIxLEX7+JzHBeoij0FgfJfJZIUamYlHkEPcLDVEBzDzdZDqTx/WJWnBpCrjCTNCGKgTSYFU72InuHpivCUAniHqZv98rXPV10y80oQVq4hdyxuS/zdpJjN1/0O9uKFxj0YV7p02lhC5A++hMjwG8XxWY/p6xcx/zGeVi8wBJpO1umpFHaOtnxq5aNSzAC0WUrydNjZr82FuL+hXgRs/G/Xwsb7jNsS2NQ2ZlE0WzvNc0R0VrOeLsjL101CUGoPb3k1+V0YpHn1Ctp9u/crXsB+V7OKuEz7F0HfkJFqx2aFpw+El9iPz9m7p8DCG/9BdAnbSm+lnDm8mdTCVJ84kHOmCVakoJxrtPRAmOrtbDyNV2MhX32GmU/d2Au7AoeIbp7Jw77R9OroPTlt [...]
        certificate: ENC[AES256_GCM,data:7xLD6e2b1fFmmOWCFJPFYM2SEhpSK2RCkiqhwlZDTW7MqObodmSRUDCypDwL/KLbD6c2XQHqL9TdIXmCMfQsrkLWoN2Y0WO57YxXI7EsPs5mp0kiyTi6ecSLKMGIg5Jl10a1gbQB5x62IfYFuQ4Z6KvyaLjx6vaplIhjVaJbJNVMVJ8x3am7vCzw2XOZQD91PzlYaIdm7aYUDZD2GeQC8vGtc1VCzfNyYUljEA1713bbrzjmKxf+1VEMLaaWhSSkYoY/wQuaCkT/Gh0qSbbCFucGeLctzSyeL9uML3AWwWM5kWraV069yNEy0XW+Ad3VeZwInzO69Xl958c+nV99NpfgRs3ES4GinFg3+XYpti2B8SpEQvWl/67s7w6m7Q26MdooNa4Ny/rTJQSnMSVKNZ+eU5K87Ynf6LfrT3LIsg8O5kLV5GcNVtY2rr3dMFHs3XuyAoo1S6a [...]
        key: ENC[AES256_GCM,data:NwD886OdXSr+vF5zBkhrwwWhUl1juWgIOiFkHlhPkpraVhlabyReTkDiUubuwtbpnuoM0gi08cxw/JuahPd0m9d6TPcG1wslmGoHzCBtG7OUFB8+PNnMNIYy8oKzIbhFSWit2W4S6CC2jGSAlS8K/K7LwVi8y8cBTqwrO6y9i0YMBIF2hj6pco5tJFWFL6R4HiONtd7SucAkV7/XSvfpMYh4slNUC2OOBnpkoPzTy07N6lpP8UOMAtyWlZ/sbYLssOzJRgXSuMHo9HD7R0A9Pp15zxFn7anxwgEgKuqaUe8wmW7fOUSZ8NGRk8ewj7HwxCu9QkOk8cb2lYWr3fHXH6Fx96aQj+iMe46Bt6HeHaeVaAq9NQjxACmFngFGMvkUPDLaAIfsGui51VuVl7sX8KNeQ7NkLwh9ObfWIRC5Xv8AeW1tdYyrS1JlIT0HIkRGvn9bOgyYZpKnZakjoKV [...]
        termination: ENC[AES256_GCM,data:AcZP+w==,iv:KOZ/6dlxxDfBnpdPlBPxmHWJv6DQJDIOAT6Z8nT2fFA=,tag:UcrNkAhStQpcMC2k0ZR53A==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-10-26T10:38:27Z'
    mac: ENC[AES256_GCM,data:UFu3xCZbfI9RqUibWui/z6zwF3kprdoyKqOGPpdAUdiM+c1Jei0Dbdbt/FnxNCPEQS0I7nJmlQV5cAwNqVL1cHAm8OMW6DGj5VtFIUTIpLf/nwWjsl0RJul21LcXKHeAi5ki+lRlvMS7/SqpoJsVXY4pY2Va9WJd7qNVvJ2xy6o=,iv:pETwS5svRyIYdBigexsBEL+6Q1+9L8UJ8Qx33TXVCgs=,tag:EPJUFzDEwC1+gad17rlH8g==,type:str]
    pgp:
    -   created_at: '2020-10-26T10:38:27Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYARAAl4IZpkBVjL0RhyN08zOSJjSwwwm6M18Xl3rLyu5cQakn
[...]
            =O6DR
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-10-26T10:38:27Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf8CvDSmO77D6QGnyfBgYgS2cz3HcwaQ3lUa9Y0rt5tYU/p
[...]
            /IegOS19v1LHVtHtY4mkLVXiA2RFf16l53wFaz9ryw==
            =xONh
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-10-26T10:38:27Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/UY9RmPgDCDk8y4BLR1s3/Imt21DBHmJgR9G/Ec4EBohc
[...]
            GnoEDwb1RKUXdz87DAa+SMbkmXbbfZ6douOyv9b0Ig==
            =3Drt
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
