user-api/overlays/ocp4-stage/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-route53
spec:
    host: stage.thoth-station.ninja
    to:
        kind: Service
        name: user-api
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:knVOPw==,iv:DYrmfC26SoJt/kwmXsQQo5DKhajYWgDy/B0zVc5myGo=,tag:NxycRQkzS0bwIkwVfJY56Q==,type:str]
        certificate: ENC[AES256_GCM,data:yw2eHNbSo1tgtHsvXG3sSNVMo0X6Ul/JsZ+0Cm/nbx+PlFxl/JsOosmMTD+peJIFpXnaJJQ0gK9RrIQ1DJloqKUraX091nlu0bLj74/PJtgg3qF/tGDZUr4l+lWaxhzMwaUDuIlzthmBjkdnL0kMofbpyW1NKz7i/ilYrbuVpZET8QrQJql3RlcGc/ljFarwHdlvxGW/bRxW59OarVTDBT+d+dqzA6kKCzcb5GTJmh8XxFfohzimRD0GuNjAmhOsq3otPJwS+b7/dIuYJewnHpHNz7nQCzxDDAiKtUwAHkyHaXDBGRoId/Up3l+LNtKZ8DBrUS6G2HFWcJPNY4F5d74Z7z8RSaj4H6n9mmOBvepkMqvVwhCIVgGe2YqycbL7Tgp5FknhI8SvTDBqtt5UaQoaK8iJEhiV3jyf1jwKBMY+j0+jVUFGLuUSe+GFFnZmcVKAxtNG8pQ [...]
        key: ENC[AES256_GCM,data:YeM2wuwFoOpUTi2kTXYmuTKf/dOeTkiMAMp0mLEvGLe3MGUaZxUzQotQocdK/XFEof86wg3wATmatL0JU8eso4c7xfnlu/v2g8rXnTANz+c7Ap58mSx0gyXKflbuW3yUsVtlOE/pVs5SBnzawy6hMezRGbAfof/OeW8bJHo1jEqpqEvJqtUyUpobu2aP7oT47wskYRbd55qJck6EQecbE1KdbVzxCI8aL0jvC8aqYRS8R7GqvdF0YXZDVHmnFzdyLXdzjRcGktPu8gm7u4YGrSj2KvM6zhMXuC2qgWQjxwJnW/VQ+bn4wg6evcoCDxPZIbIGzcKZfLfeTli0pajZNbr6xnDRRPgRNmeyFN2+HH0wVxMawS36pS1hCXp9vl8DREOKU+d1+bPf8IE7M2yBvyIerIVO+DBcqZq8RZkIH9Tc9OlnOjnKRY6F1sE52VWL13mVlR4vGoepuNXU6aa [...]
        caCertificate: ENC[AES256_GCM,data:OEDdFol3wsOAo+s1FYYIE02wRdop2mcyZU2OtWXIjRYqPCB1wF71AuWI6prOGaeB248NXD69UTUbqcrYo/P7l52sLN/iuo0Yvi8Ai28/KpQ2yr703nYzw+AapBQNaSbKPE83sr8ZM1tYM4dpms2MXTjy5xhQH236Kc+yLhunU2r9uns/DpWU3H+tBiKHJ9ZiANBBxMs8qfezM6s+V/zqbYS+Rgv2GL6n8p5ChfzY3A2omI4G0CE1q8uKxzQzUCPJm77qHP3/o21HToy9drbxbl39VUo1wdeyTWBVHRxvw8nv9MMT+yX6fI1toEl8gDhmORsZk7lOk0Q5JhDRh9hYogWjwyRA/i7YXzho0OvNQ+QDr4WMel5ybMk/+ddideWupschZ/wDnA8eX31J6eSdkv6Rc2mrJfmLROZ6iov7g4Qwf3WI+nABHnndph/w1m9a9gX7XOHWe [...]
    wildcardPolicy: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-07-08T12:11:51Z"
    mac: ENC[AES256_GCM,data:SFisb1/qwb8B3b6XYmr6Ab0qLU6O2Nw+YkIQklm5kkarRaSmIcVl3WNVrwBWg+cw34CFxEXTKSR5lldBSmqbI39jyp+tmNT1DQe4FY0zjOfTDxMnKOlYEG7IivxLKxoBMDy19hK0KtO61833YB07i7ar6QiLaTZzBJS4g0sI9Dk=,iv:cYILUl6+sU6aH+AEpg8ttxCyySYE5e2NYn3YxGkznhs=,tag:z52MJsyiEy08RJo0vaBIhQ==,type:str]
    pgp:
        - created_at: "2022-07-08T12:11:49Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//USkny/fc/xAxn2TT7YYEdB9ywaZe36K3vsfEzAcUMrjb
[...]
            =fWbE
            -----END PGP MESSAGE-----
          fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
        - created_at: "2022-07-08T12:11:49Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcBMA+/WpawS9RPbAQf/XP3lk20W/tnSAGQCCK/4QhGrNLI/eh8Kkm+VNB958M4k
[...]
            8fblr7Uf22KYxHd2aeXfyisR
            =rQzG
            -----END PGP MESSAGE-----
          fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
        - created_at: "2022-07-08T12:11:49Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgApe0p7NgxiUEjxFCPejzUOEYGxf2w4nlzqdzVMC0nr4un
[...]
            +B9tu/l9UN4UJ7JbCIxutaUeV5G2pssrQHJzAVjfsw==
            =eNNB
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
        - created_at: "2022-07-08T12:11:49Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9aKBcudqifiAQ/9F2a+M9+s5ihEkxut+Wamt4gCEloqohClkyyrqqPQY610
[...]
            /0eEOMr6Ufmg7FDXAufgnm7g91rgQ5aOvBcH35xl1f1lYg==
            =WKjf
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
        - created_at: "2022-07-08T12:11:49Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFOA9LRbhPydJmLEAf+JPK5iPPs0nEVRP3dWIo4B1UGuzbVQYGZUt75LpXEX4cy
[...]
            s85ZdLlVwKGxi33I2ZOkRglHsaEbKa2ktUuezwq+0PCM3Bh2
            =3MEI
            -----END PGP MESSAGE-----
          fp: 8D191B7544E9CCC3547B25A877E5A5B31D13A647
        - created_at: "2022-07-08T12:11:49Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9NBwWNwg7uAAQ/+Klq0WzPA5fvFI3EkeJ1F4Hpaos7AYaJY+JN/A8Hed1Do
[...]
            ktcphtb/apBwoxp0pLtny+GIIV+0021DvP1RVZWYqhT2KA==
            =TY3K
            -----END PGP MESSAGE-----
          fp: A01778ACB7CC4D41B00FDD78CCBE624D8FF6D016
        - created_at: "2022-07-08T12:11:49Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAxdcElc1DYwyAQ//R+ZgFad9JcOfUbjEdD4+0vm0TIyWK4TB/HYIADpOMzBB
[...]
            =qhKx
            -----END PGP MESSAGE-----
          fp: CEBD171D5C7B1C5FB960301167AC891FB1FDF3E4
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.7.3
